Fix print breaks in chrome

--- a/themes/unrealised/assets/css/printable.css
+++ b/themes/unrealised/assets/css/printable.css
@@ -8,4 +8,9 @@
     .print-collapsable .grid-onethird {
         grid-column: span 12 / span 12 !important;
     }
+
+    .printbreak {
+        page-break-after: always;
+        page-break-inside: avoid;
+    }
 }
